Fixes layout issues with fixed event boxes and the user event form

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -257,11 +257,5 @@ td.mafo-planner-time {
 }
 
 .mafo-planner-fixed-event {
-    background: repeating-linear-gradient(
-            45deg,
-            rgba(103, 20, 15, 0.11),
-            rgba(103, 20, 15, 0.11) 7px,
-            rgba(226, 221, 218, 0.50) 7px,
-            rgba(226, 221, 218, 0.50) 14px
-    );
+    background: rgba(226, 221, 218, 0.50);
 }
